# kng

./: README.md  index.html
EPI/: README  reverse_linked_list.cpp
HR/: bash_cut.sh  cpp_attending_workshops.cpp  cpp_class_templates.cpp  two_robots.cpp
bash/: detect_empty.sh  git_commit_info.sh
c/: gotoxy.c  run
cf/: 1a_theater_square.cpp  1a_theater_square_iostream.cpp
cpp/: README.md  alternative.cpp  back_inserter.cpp  bitset.cpp  bitwise.cpp  chrono_simple.cpp  combinations.cpp  constexpr.cpp  determine_endianness.cpp  dictionary.cpp  endian_test.cpp  endianness.cpp  endianness_cpp11.cpp  explicit_constructor.cpp  final_classes.cpp  float_equality.cpp  floating_equality.cpp  function_ptr.cpp  ifstream.cpp  is_power_of_two.cpp  lambda_captures.cpp  lcm.cpp  linear_regression.cpp  move_constructor.cpp  mutable.cpp  ostream_iterator.cpp  pair_equality.cpp  partition.cpp  quicksort.cpp  rand_example.cpp  random_engine.cpp  random_shuffle.cpp  random_test.cpp  ranged_for.cpp  regex.cpp  shuffle.cpp  simple_templated_ll.cpp  smart_pointer_simple.cpp  sort_vector_of_pairs.cpp  sort_vector_of_structs.cpp  (+3 more)
cs/: build_run.sh  simple.cs
dp/: README
epi/: reverse_polish.cpp
examples_sql/: ex0.sql
gcj/: README.md
gnuplot/: gen_simple_plot.sh  simple.dem
java/: Makefile  SimpleHello.java
js/: hello_world_SDL.cpp  opengl_test.cpp  run_html.sh  run_js.sh  user_input.js
latex/: test.tex
lc/: b.md
leetcode/: find_unique.cpp  lc051_n_queens.cpp  lc118_pascals_triangle.cpp  (+5 more)
util/: BigFactorial.cpp  BigUInt.cpp  BigUIntTests.h  CMakeLists.txt  README.md
(+372 files in other folders)
